Fix: vertically align items in UserNavigation

--- a/src/modules/core/components/MemberReputation/MemberReputation.css
+++ b/src/modules/core/components/MemberReputation/MemberReputation.css
@@ -2,6 +2,7 @@
 
 .reputation {
   display: inline-block;
+  vertical-align: 0.4px;
   font-size: var(--size-smallish);
   font-weight: var(--weight-bold);
   color: reputationColor;
@@ -10,7 +11,6 @@
 .icon {
   display: inline-block;
   margin-right: 3px;
-  height: 11px;
   width: 11px;
 }
 
