--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -12,7 +12,7 @@
 .notificationsIcon {
   flex-grow: 0;
   margin-right: 15px;
-  padding: 9px;
+  padding: 7px 9px 9px 9px;
   height: 36px;
   width: 36px;
   border-radius: 38px;
