--- a/src/modules/users/components/UserTokenActivationButton/UserTokenActivationButton.css
+++ b/src/modules/users/components/UserTokenActivationButton/UserTokenActivationButton.css
@@ -2,7 +2,7 @@
   padding: 0 8px;
   height: 26px;
   position: relative;
-  top: -0.1px;
+  top: -0.9px;
   border: none;
   border-radius: var(--radius-normal);
   background: transparent;
